--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="whats_next">What\'s next</string>
     <string name="completed">Completed</string>
     <string name="action_delete">Delete</string>
+    <string name="set_date">Set Date</string>
+    <string name="set_time">Set Time</string>
 </resources>
